--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
-body {
+* {
   margin: 0;
+}
+body {
+  background-color: rgb(234, 237, 237);
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
