--- a/src/Home.css
+++ b/src/Home.css
@@ -9,7 +9,7 @@
   max-width: 1250px;
   margin-left: auto;
   margin-right: auto;
-  background-color: rgb(234, 237, 237);
+  /* background-color: rgb(234, 237, 237); */
 }
 .home_row {
   display: flex;
