--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -15,3 +15,10 @@
   padding: 10px;
   border-bottom: 1px solid lightgrey;
 }
+.checkout_right {
+  align-content: flex-end;
+  margin-left: 20px;
+}
+.checkout_left {
+  width: 800px;
+}
